test/fail/actor-reference-scheme.mo
// actor references

let _ = actor "https://cern.ch";  // wrong scheme
